# survey-route-grouping

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  UV_USAGE.md  pyproject.toml
.clinerules/: 01-git-rules.md
examples/: README.md  basic_usage.py  dingshan_usage.py  full_workflow.py
src/survey_grouping/: __init__.py  main.py
src/survey_grouping/algorithms/: address_classifier.py  clustering.py  grouping_engine.py  route_optimizer.py
src/survey_grouping/config/: settings.py
src/survey_grouping/database/: connection.py  queries.py
src/survey_grouping/exporters/: __init__.py  csv_exporter.py  excel_exporter.py  json_exporter.py  map_exporter.py
src/survey_grouping/importers/: csv_importer.py
src/survey_grouping/models/: address.py  address_stats.py  group.py  strategy.py
src/survey_grouping/processors/: dingshan_processor.py  route_processor.py  village_processor.py
src/survey_grouping/utils/: address_utils.py  geo_utils.py  validators.py
src/survey_grouping/validators/: __init__.py  address_validator.py
src/survey_grouping/visualizers/: __init__.py  color_schemes.py  folium_renderer.py  map_visualizer.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_csv_importer.py  test_exporters.py  test_models.py  test_validators.py  test_village_processor.py  test_visualizers.py
